--- a/yummy-web/package.json
+++ b/yummy-web/package.json
@@ -26,51 +26,50 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.1.0",
-    "@reduxjs/toolkit": "2.8.2",
-    "@types/react-redux": "^7.1.26",
-    "antd": "^6.1.1",
-    "axios": "^1.13.2",
-    "i18next": "^23.5.1",
-    "i18next-browser-languagedetector": "^7.1.0",
+    "@reduxjs/toolkit": "2.11.2",
+    "@types/react-redux": "^7.1.34",
+    "antd": "^6.3.0",
+    "axios": "^1.13.5",
+    "i18next": "^25.8.10",
+    "i18next-browser-languagedetector": "^8.2.1",
     "i18next-http-backend": "^2.7.3",
-    "luxon": "^3.4.3",
+    "luxon": "^3.7.2",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^13.2.2",
-    "react-redux": "9.0.1",
+    "react-i18next": "^16.5.4",
+    "react-redux": "9.2.0",
     "react-router-dom": "^7.8.2",
-    "sass": "^1.66.1"
+    "sass": "^1.97.3"
   },
   "devDependencies": {
-    "@types/axios": "^0.9.36",
-    "@types/luxon": "^3.3.2",
+    "@types/luxon": "^3.7.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "@vitejs/plugin-legacy": "^7.2.1",
-    "@vitejs/plugin-react-swc": "^4.0.1",
+    "@vitejs/plugin-react-swc": "^4.2.3",
     "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-prettier": "^9.1.2",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-prettier": "^5.5.5",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "husky": "^8.0.3",
-    "lint-staged": "^14.0.0",
-    "postcss-scss": "^4.0.7",
-    "prettier": "3.0.2",
-    "sort-package-json": "^2.5.1",
-    "stylelint": "^15.10.3",
-    "stylelint-config-standard-scss": "^10.0.0",
-    "terser": "^5.19.2",
-    "typescript": "^5.0.2",
-    "vite": "7.1.3",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
+    "postcss-scss": "^4.0.9",
+    "prettier": "3.8.1",
+    "sort-package-json": "^3.6.1",
+    "stylelint": "^17.3.0",
+    "stylelint-config-standard-scss": "^17.0.0",
+    "terser": "^5.46.0",
+    "typescript": "^5.7.3",
+    "vite": "^7.1.3",
     "vite-plugin-checker": "^0.6.1"
   }
 }
