--- a/yummy-web/package.json
+++ b/yummy-web/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "build": "tsc && vite build",
+    "dev": "vite",
+    "dev:mobile": "node scripts/dev-mobile.mjs",
     "fix": "eslint --ext ts,tsx --fix ",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "prepare": "cd .. && husky install yummy-web/.husky",
